# django-guest-user2

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci-cd.yml  test-example.yml  test.yml
docs/: index.rst  setup.rst
guest_user/: __init__.py  app_settings.py  forms.py  functions.py  models.py
guest_user/migrations/: 0001_initial.py
guest_user/templatetags/: guest_user.py
scripts/: comprehensive_demo.py  urls_to_test.py
test_proj/: settings.py  settings_debug.py  test_backends.py  test_forms.py  test_functions.py  test_management_commands.py  test_settings.py  test_templatetags.py  urls.py  views.py
test_proj/migrations/: 0001_initial.py
test_proj/templates/: home.html  profile.html
