[tool.poetry]
name = "django-guest-user"
version = "0.5.5"
description = "A Django app that lets visitors interact with your site without registration."
authors = [
  "Julian Wachholz <julian@wachholz.ch>",
  "Ryan Malloy <rpm@malloys.us>",
]
readme = "README.md"
license = "MIT"

repository = "https://github.com/rsp2k/django-guest-user2"
homepage = "https://github.com/rsp2k/django-guest-user2"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["django", "guest", "user", "authentication", "temporary", "lazy", "signup"]

packages = [{ include = "guest_user" }]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
django = "^5.2.0"
django-allauth = "^0.57.0"
pytest = "^7.4.2"
pytest-django = "^4.5.2"
requests-oauthlib = "^1.3.0"
sphinx = "<7.2.0"
sphinx-rtd-theme = "^1.3.0"
tox = "^4.11.3"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_proj.settings"
minversion = "7.0"
addopts = "--no-migrations"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''
